--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ button:hover {
         <div class="metrics-panel">
             <h3>OFTCC Metrics</h3>
             <div class="framework-badge">
-                 OFTCC ⊕ HTOF ⊕ CERFC+ ⊕ PUCF ⊕ UACF 2.5
+                 OFTCC ⊕ HTOF ⊕ CERFC+ ⊕ PUCF ⊕ UACF 2.5 ⊕ Simplicial
             </div>
             <div class="status" id="status" aria-live="polite" aria-atomic="true">
                 Initializing...
@@ -515,7 +515,8 @@ button:hover {
                 • Sheaf Laplacian: $ℒ_{\text{OFTCC}} = \bigoplus_{X \in \{B,I,E,M,G,C,R\}} ℒ_X$<br>
                 • Cohomology: $H¹(G,ℱ) = ker d¹/im d⁰$<br>
                 • Stability: $exp(-dim H¹)$<br>
-                • Φ: $log(1 + MI) \cdot S \cdot GU$
+                • Φ: $log(1 + MI) \cdot S \cdot GU$<br>
+                • Gluing Inconsistency: $∑_{e∈E} ||P_e s_u - s_v||^2$
             </div>
         </div>
         <div class="right-column">
@@ -773,6 +774,30 @@ function logDeterminantFromDiagonal(M) {
     for (let i=0;i<M.length;i++) s += Math.log(Math.max(Math.abs(M[i][i]), 1e-12));
     return s;
 }
+function matrixRank(M) {
+    const m = M?.length || 0;
+    const n = m > 0 ? M[0].length : 0;
+    if (!m || !n) return 0;
+    const A = M.map(row => row.slice());
+    let rank = 0;
+    for (let col = 0; col < n && rank < m; col++) {
+        let pivotRow = rank;
+        for (let i = rank + 1; i < m; i++) {
+            if (Math.abs(A[i][col]) > Math.abs(A[pivotRow][col])) pivotRow = i;
+        }
+        if (Math.abs(A[pivotRow][col]) < 1e-10) continue;
+        [A[rank], A[pivotRow]] = [A[pivotRow], A[rank]];
+        const pivot = A[rank][col];
+        for (let j = col; j < n; j++) A[rank][j] /= pivot;
+        for (let i = 0; i < m; i++) {
+            if (i === rank) continue;
+            const factor = A[i][col];
+            for (let j = col; j < n; j++) A[i][j] -= factor * A[rank][j];
+        }
+        rank++;
+    }
+    return rank;
+}
 const sheafVertexPositions = {
     0: {x:0.08, y:0.16}, 1: {x:0.26, y:0.48}, 2: {x:0.08, y:0.80},
     3: {x:0.92, y:0.16}, 4: {x:0.70, y:0.50}, 5: {x:0.92, y:0.80},
@@ -802,6 +827,16 @@ class EnhancedQualiaSheaf {
                 ['paddle_y', 'paddle_speed'], ['player_collision', 'paddle_y'], ['ai_collision', 'ball_x']
             );
         }
+        this.simplicialComplex = {
+            vertices: this.graph.vertices,
+            edges: this.graph.edges,
+            triangles: [
+                ['paddle_y', 'ball_y', 'player_collision'],
+                ['ball_x', 'ball_dx', 'player_collision'],
+                ['ball_y', 'ball_dy', 'ai_collision'],
+                ['player_score', 'ai_score', 'player_collision']
+            ]
+        };
         this.alpha = clamp(alpha, 0.01, 0.2);
         this.beta = clamp(beta, 0.01, 0.2);
         this.gamma = clamp(gamma, 0.01, 0.1);
@@ -823,6 +858,30 @@ class EnhancedQualiaSheaf {
             this.windowedStates.push(Array(N_total_stalk_dim).fill().map(() => clamp((Math.random() - 0.5) * 0.1, -1, 1)));
         }
         logger.info('EnhancedQualiaSheaf initialized.');
+    }
+    buildBoundaryMatrices() {
+        const vIdx = new Map(this.graph.vertices.map((v, i) => [v, i]));
+        const eIdx = new Map(this.graph.edges.map((e, i) => [e.join(','), i]));
+        const nV = this.graph.vertices.length;
+        const nE = this.graph.edges.length;
+        const nT = this.simplicialComplex.triangles.length;
+        const boundary1 = zeroMatrix(nE, nV);
+        this.graph.edges.forEach(([u, v], i) => {
+            boundary1[i][vIdx.get(u)] = -1;
+            boundary1[i][vIdx.get(v)] = 1;
+        });
+        const boundary2 = zeroMatrix(nT, nE);
+        this.simplicialComplex.triangles.forEach(([u, v, w], i) => {
+            const edges = [[u, v], [v, w], [w, u]];
+            edges.forEach(([a, b]) => {
+                const sorted = [a, b].sort().join(',');
+                const eIdxVal = eIdx.get(sorted);
+                if (eIdxVal !== undefined) {
+                    boundary2[i][eIdxVal] = a < b ? 1 : -1;
+                }
+            });
+        });
+        return { boundary1, boundary2 };
     }
     buildAdjacencyMatrix() {
         const n = this.graph.vertices.length;
@@ -970,20 +1029,26 @@ class EnhancedQualiaSheaf {
     }
     _updateDerivedMetrics() {
         this.computeH1Dimension();
+        this.computeGluingInconsistency();
         this.computeGestaltUnity();
         this.computeIntegratedInformation();
     }
     computeH1Dimension() {
-        let inconsistency = 0;
+        const { boundary1, boundary2 } = this.buildBoundaryMatrices();
+        const rankB1 = matrixRank(boundary1);
+        const rankB2 = matrixRank(boundary2);
+        this.h1Dimension = clamp(this.graph.edges.length - rankB1 - rankB2, 0, 3);
+        this.stability = clamp(Math.exp(-this.h1Dimension * 0.1), 0.1, 1);
+    }
+    computeGluingInconsistency() {
+        let sum = 0;
         this.graph.edges.forEach(([u, v]) => {
             const stalk_u = this.stalks.get(u);
             const stalk_v = this.stalks.get(v);
             const P_uv = this.projectionMatrices.get(`${u}-${v}`) || identity(this.qDim);
-            inconsistency += norm2(vecSub(matVecMul(P_uv, stalk_u), stalk_v));
+            sum += norm2(vecSub(matVecMul(P_uv, stalk_u), stalk_v));
         });
-        this.h1Dimension = clamp(inconsistency / (this.graph.edges.length || 1), 0, 3);
-        this.inconsistency = this.h1Dimension;
-        this.stability = clamp(Math.exp(-this.h1Dimension * 0.1), 0.1, 1);
+        this.inconsistency = this.graph.edges.length > 0 ? clamp(sum / this.graph.edges.length, 0, 1) : 0;
     }
     computeGestaltUnity() {
         let sum = 0;
